# keif

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRD_VS_CURRENT_UI.md  V2_implementation_plan.txt  opencode.json  requirements.txt
brewos-engine/: .gitignore  ClaudeCode_review.md  Opus_review.md  README.md  STATUS_DELTA.md  STATUS_REPORT.md  VAULT_AUDIT.md  pyproject.toml
brewos-engine/.github/workflows/: test.yml
brewos-engine/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
brewos-engine/brewos/: __init__.py
brewos-engine/brewos/methods/: __init__.py  aeropress.py  espresso.py  kalita.py  moka_pot.py
brewos-engine/brewos/models/: inputs.py  outputs.py
brewos-engine/brewos/solvers/: immersion.py  percolation.py  pressure.py
brewos-engine/brewos/utils/: co2_bloom.py  output_helpers.py  params.py
brewos-engine/keif-mobile/: app.config.ts  eas.json  jest.config.js  package-lock.json  package.json
brewos-engine/keif-mobile/app/: _layout.tsx  dashboard.tsx  index.tsx
brewos-engine/keif-mobile/components/: ArchiveBanner.tsx  ChartLegend.tsx  ClickSpinner.tsx  CompareMetricColumns.tsx  CompareSCAChart.tsx  DeleteConfirmModal.tsx  FlavorBars.tsx  (+8 more)
brewos-engine/tests/: test_aeropress.py  test_all_methods.py  test_api.py  test_co2_bloom.py  test_cross_method_tolerance.py  test_espresso.py  test_extended_outputs.py  test_fast_mode.py  test_french_press.py  test_grinder_presets.py  test_immersion_poc.py  test_immersion_solver.py  test_model_updates.py  test_percolation_solver.py  test_v60.py
(+165 files in other folders)
