[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brewos-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "scipy",
    "numpy",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["brewos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
